# letterboxd_wrapped

./: .gitignore  README.md  hello.py  movie_cache.json  playground.ipynb  playground.py  pyproject.toml
.ipynb_checkpoints/: playground-checkpoint.ipynb
apps/: playground.py  your_wrapped.py
extracted_files/: diary.csv
