[project]
name = "letterboxd-wrapped"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.10.9",
    "matplotlib>=3.10.0",
    "polars>=1.17.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]
